--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+@media (max-width: 640px) {
+  #data-table {
+    font-size: 12px;
+  }
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
